--- a/Client/Style.css
+++ b/Client/Style.css
@@ -1,15 +1,17 @@
 body {
-    font-family: 'Thasadith', sans-serif
+    font-family: 'Thasadith', sans-serif;
 }
 #side-container {
+    font-family: 'Thasadith', sans-serif;
     position: relative;
-    visibility:hidden;
+    visibility: hidden;
     /*display: inline-block;*/
     width: 300px;
     height: 400px;
 }
 
 #state-details h3 {
+    font-family: 'Thasadith', sans-serif;
     margin: 18px 0 0 0;
 }
 
@@ -25,6 +27,7 @@ body {
     }
 
 #vote-chart {
+    font-family: 'Thasadith', sans-serif;
     position: absolute;
     top: 0;
     left: 0;
@@ -32,6 +35,7 @@ body {
     height: 200px;
 }
 #main-container {
+    font-family: 'Thasadith', sans-serif;
     display: inline-block;
     width: 650px;
     height: 400px;
