--- a/Client/Style.css
+++ b/Client/Style.css
@@ -6,16 +6,10 @@ body {
     font-family: 'Thasadith', sans-serif;
     margin: auto;
     width: 650px;
-    height: 570px;
+    height: 590px;
 }
-/*#chartdivBar{
-    margin-top:500px;
-    width: 1000px;
-    height: 500px;
-    margin:auto;
-}*/
 
-/* Clear floats after the columns */
+
 #View3:after, #View2:after{
     content: "";
     display: table;
@@ -31,24 +25,37 @@ body {
 .Pie {
     float: left;
     width: 33.33%;
+    margin-top:50px;
 }
 .Bar {
     float: left;
     width: 50%;
+    margin-top: 50px;
+    margin-bottom:20px;
 }
-
+#green {
+    color: #33cc33
+}
+#blue {
+    color: #85C4E3
+}
+#red {
+    color: #ff0000
+}
 h1, h2 {
     font-family: 'Thasadith', sans-serif;
     text-align: center
 }
-
+#main-container h1{
+    margin-top:50px;
+}
+#View2 h1 {
+    margin-top:10px;
+}
 h3 {
     font-family: 'Thasadith', sans-serif;
-    font-weight:400;
-    text-align: center
-}
-.view3Title {
-    margin-bottom: 100px;
+    font-weight: 400;
+    text-align: center;
 }
 
 img{
@@ -56,6 +63,12 @@ img{
     margin:auto;
     height:450px;
 }
+
+#main-container img{
+    margin-top:50px;
+    margin-bottom:50px;
+}
+
 
 #arrow {
     display: block;
